Adding animations and headset

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Foosh</title>
 </head>
 <body>
+    <div class="headset headset1"></div>
     <div class="outer">
         <div class="head">
             <div class="eyes">
@@ -15,5 +16,6 @@
             </div>
         </div>
     </div>
+    <div class="headset headset2"></div>
 </body>
 </html>
