Adding mouse controls

--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" type="image/x-icon" href="./favicon.png">
     <title>Foosh</title>
 </head>
 <body>
+    <div class="btn">
+        <button class="switch-btn" onclick="switchMode()">Relaxed</button>
+    </div>
     <div class="headset headset1"></div>
     <div class="outer">
         <div class="head">
             <div class="eyes">
-                <div class="eye"></div>
-                <div class="eye"></div>
+                <div class="eye relaxed"></div>
+                <div class="eye relaxed"></div>
             </div>
         </div>
     </div>
     <div class="headset headset2"></div>
+    <script src="script.js"></script>
 </body>
 </html>
